# GAMES101_HW

./: README.md
Assignment2/代码框架/: CMakeLists.txt  main.cpp  rasterizer.cpp
Assignment3/Code/: CMakeLists.txt  main.cpp  rasterizer.cpp
Assignment3/Code—/: CMakeLists.txt  main.cpp  rasterizer.cpp
Assignment4/code/: main.cpp
Assignment5/Code/: CMakeLists.txt  Renderer.cpp  Triangle.hpp  main.cpp
PA6/Assignment6/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Triangle.hpp
pa0/: CMakeLists.txt
pa1/代码框架/: CMakeLists.txt  main.cpp
